@@ -5,7 +5,6 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.6'
   id 'com.diffplug.eclipse.apt' version '4.0.1'
   id 'nu.studer.jooq' version '9.0'
-  id 'pl.zalas.structurizr-cli' version '1.9.0'
 }
 
 group = 'io.github.krloxz.fws'
@@ -19,7 +18,6 @@ configurations {
   compileOnly {
     extendsFrom annotationProcessor
   }
-  plantuml
 }
 
 repositories {
@@ -39,9 +37,15 @@ dependencies {
   annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+  // Spring Modulith
+  implementation 'org.springframework.modulith:spring-modulith-starter-core'
+  implementation 'org.jmolecules.integrations:jmolecules-starter-ddd'
+  implementation 'org.jmolecules:jmolecules-onion-architecture'
+
   // Immutables
   implementation "org.immutables:value-annotations:${immutablesVersion}"
   implementation "org.immutables:builder:${immutablesVersion}"
+  implementation 'com.google.guava:guava:33.0.0-jre'
   annotationProcessor "org.immutables:value-processor:${immutablesVersion}"
   testAnnotationProcessor "org.immutables:value-processor:${immutablesVersion}"
 
@@ -63,20 +67,16 @@ dependencies {
   // Required by @org.springframework.lang.Nullable
   implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-  // PlantUML
-  plantuml 'net.sourceforge.plantuml:plantuml-gplv2:1.2024.6'
-
-  // Spring Modulith
-  implementation 'org.springframework.modulith:spring-modulith-starter-core'
-  implementation 'org.jmolecules.integrations:jmolecules-starter-ddd'
-  implementation 'org.jmolecules:jmolecules-onion-architecture'
-  testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
-  testImplementation 'org.jmolecules.integrations:jmolecules-archunit'
-  testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
-
   // Testing
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'com.atlassian.oai:swagger-request-validator-mockmvc:2.41.0'
+
+  // Architecture veryfication and documentation
+  testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
+  testImplementation 'org.jmolecules.integrations:jmolecules-archunit'
+  testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
+  testImplementation 'com.structurizr:structurizr-dsl:2.2.0'
+  testImplementation 'net.sourceforge.plantuml:plantuml-gplv2:1.2024.6'
 }
 
 dependencyManagement {
@@ -181,17 +181,25 @@ jooq {
   }
 }
 
-// wire JOOQ sources into the main Java source set
-sourceSets.main.java.srcDirs (
-  tasks.named('generateFreelancerJooq').flatMap { it.outputDir },
-  tasks.named('generateProjectJooq').flatMap { it.outputDir }
-)
-
 tasks.register('generateJooq') {
   group = 'JOOQ'
   description = 'Generates all the jOOQ sources.'
-  dependsOn 'generateFreelancerJooq', 'generateProjectJooq'
 }
+
+['generateFreelancerJooq', 'generateProjectJooq']
+  .collect{ tasks.named(it) }
+  .each { jooqTask ->
+    // Make jOOQ task participate in incremental builds
+    jooqTask.configure { allInputsDeclared = true }
+    // Wire JOOQ sources into the main Java source set
+    sourceSets.main.java.srcDirs(jooqTask.flatMap{ it.outputDir })
+    // Group all jooq tasks together
+    tasks.named('generateJooq') {
+      dependsOn jooqTask
+      inputs.files jooqTask
+      outputs.files jooqTask
+    }
+  }
 
 eclipse {
   synchronizationTasks 'generateJooq'
@@ -201,11 +209,11 @@ eclipse {
 }
 
 tasks.named('test') {
-  useJUnitPlatform()
+  useJUnitPlatform {
+    excludeTags 'architecture', 'documentation'
+  }
   jvmArgs("-XX:+EnableDynamicAgentLoading")
-}
 
-test {
   // Copied from https://stackoverflow.com/a/36130467
   afterSuite { desc, result ->
     if (!desc.parent) { // will match the outermost suite
@@ -216,25 +224,29 @@ test {
   }
 }
 
-structurizrCli {
-  export {
-    name = 'PlantUML'
-    format = 'plantuml'
-    workspace = "${projectDir}/docs/structurizr/workspace.dsl"
-    output = "${projectDir}/docs/structurizr/.generated"
+tasks.register('verifyArchitecture', Test) {
+  group = 'verification'
+  description = 'Verifies architecture and design practices.'
+
+  useJUnitPlatform {
+    includeTags 'architecture'
   }
+  jvmArgs("-XX:+EnableDynamicAgentLoading")
+  mustRunAfter 'test'
 }
 
-tasks.register('diagrams', JavaExec) {
+tasks.register('generateDocumentation', Test) {
   group = 'documentation'
-  description = 'Generates Structurizr and PlantUML diagrams.'
+  description = 'Generates documentation artifacts.'
 
-  classpath = configurations.plantuml
-  main = 'net.sourceforge.plantuml.Run'
-  args = ["-tsvg", "-o", "${projectDir}/docs/images", "${projectDir}/docs/**/*.puml"]
+  useJUnitPlatform {
+    includeTags 'documentation'
+  }
+  jvmArgs("-XX:+EnableDynamicAgentLoading")
+  outputs.upToDateWhen { false }
+  mustRunAfter 'verifyArchitecture'
+}
 
-  inputs.files fileTree(dir: "${projectDir}/docs", include: '**/*.puml')
-  outputs.dir "${projectDir}/docs/images"
-  outputs.dir "${projectDir}/docs/structurizr/.generated"
-  dependsOn 'structurizrCliExport'
+tasks.named('check') {
+  dependsOn 'verifyArchitecture', 'generateDocumentation'
 }
